--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Demonstration of ChatGPT API in a Python Flask Application. A Skolo Online course.">
 
-    <title>Skolo Chat-GPT</title>
+    <title>Customer Service</title>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
@@ -16,7 +16,7 @@
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Skolo Online Chat GPT DEMO</a>
+      <a class="navbar-brand" href="#">Customer Service Online</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,13 +34,11 @@
   <div class="container">
     <br>
     <br>
-    <h1 class="mt-5">Get Started with ChatGPT API from OpenAI</h1>
+    <h1 class="mt-5">Customer Service Chat bot</h1>
     <p class="lead">
-      This project is created for educational purposes and demonstrates the use of ChatGPT API from OpenAI. To get started you will need the following:
+      This is an ai powered bot which helps in resoving issues regarding your orders.
     </p>
-    <ul>
-      <li>OpenAI API Key, which you can get here: <a href="https://openai.com/product#made-for-developers">OpenAI Website</a></li>
-    </ul>
+
 
 
     <div id="list-group" class="list-group w-auto">
@@ -77,7 +75,7 @@
             `;
             $("#chat-input").val('');
             $("#list-group").append(html_data);
-        });
+        
 
         $.ajax({
             type: "POST",
@@ -98,6 +96,7 @@
             $("#list-group").append(gpt_data);
                 }
             });
+        });
     </script>
   </body>
 </html>
