--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,11 @@
        <div class="input-group-append">
          <button id="gpt-button" class="btn btn-primary">send</button>
        </div>
+       
+    <form action="/reset" class="button">
+        <button  type="submit" id="end-chat">End Chat</button>
+    </form>
+
    </div>
 </main>
 
